--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.1.9.RELEASE</version>
+        <version>2.2.7.RELEASE</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
     <groupId>nl.dtls</groupId>
@@ -16,8 +16,9 @@
     <description>Admin Panel</description>
 
     <properties>
-        <!-- Project -->
-        <java.version>11</java.version>
+        <!-- Maven -->
+        <maven.compiler.source>14</maven.compiler.source>
+        <maven.compiler.target>14</maven.compiler.target>
 
         <!-- Core -->
         <mongobee.version>0.13</mongobee.version>
@@ -28,7 +29,7 @@
         <swagger.version>2.9.2</swagger.version>
 
         <!-- Plugins -->
-        <plugin.mavenlic.version>3.0</plugin.mavenlic.version>
+        <plugin.license.version>3.0</plugin.license.version>
     </properties>
 
     <dependencies>
@@ -137,7 +138,7 @@
             <plugin>
                 <groupId>com.mycila</groupId>
                 <artifactId>license-maven-plugin</artifactId>
-                <version>${plugin.mavenlic.version}</version>
+                <version>${plugin.license.version}</version>
                 <configuration>
                     <header>com/mycila/maven/plugin/license/templates/MIT.txt</header>
                     <properties>
